did some updates

--- a/templates/login.html
+++ b/templates/login.html
@@ -30,7 +30,9 @@
                 required
                 class="form-control"><br><br>
 
-                <input type="submit" value="Login" class="btn btn-primary">
+                <input type="submit" value="Login" class="btn btn-primary"><br><br>
+
+                <p>Don't have an account?<a href="/register">Register</a></p>
             </form>
         </div>
         <div class="col-md-4"></div>
