--- a/templates/register.html
+++ b/templates/register.html
@@ -48,7 +48,9 @@
             required
             class="form-control"> <br><br>
 
-            <input type="submit" value="Register" class="btn btn-success text-center">
+            <input type="submit" value="Register" class="btn btn-success text-center"><br><br>
+
+            <p>Already have an account?<a href="/login">Log In</a></p>
      </form>
     </div>
     <div class="col-md-4"></div>
