--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -13,7 +13,10 @@
             <span></span>
         </h1>
         <h2><p class="text-success text-center">Hello, {{ name }}</p></h2>
-          <a href="/logout" class="btn btn-secondary">Logout</a>
+        {{assignments}}
+
+        <a href="{{ url_for('create_assignment') }}" class="btn btn-outline-dark">Post New Assignment</a><br><br>
+        <a href="/logout" class="btn btn-secondary">Logout</a>
     </div>
 </body>
 </html>
