--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -13,9 +13,35 @@
             <span></span>
         </h1>
         <h2><p class="text-success text-center">Hello, {{ name }}</p></h2>
-        {{assignments}}
+        <!-- {{assignments}} -->
 
-        <a href="{{ url_for('create_assignment') }}" class="btn btn-outline-dark">Post New Assignment</a><br><br>
+        <h4>Your Assignments</h4>
+        <table class="table table-bordered table-striped">
+            <thead>
+            <tr>
+                <th>Title</th>
+                <th>Description</th>
+                <th>Due Date</th>
+                <th>Posted At</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for assignment in assignments %}
+            <tr>
+                <td>{{ assignment[0] }}</td>
+                <td>{{ assignment[1] }}</td>
+                <td>{{ assignment[2] }}</td>
+                <td>{{ assignment[3] }}</td>
+            </tr>
+            {% else %}
+            <tr>
+                <td colspan="4">No assignments posted yet.</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+        <a href="{{ url_for('create_assignment') }}" class="btn btn-outline-success">Post New Assignment</a><br><br>
         <a href="/logout" class="btn btn-secondary">Logout</a>
     </div>
 </body>
