did some updates

--- a/templates/edit_user.html
+++ b/templates/edit_user.html
@@ -38,7 +38,7 @@
                         </div>
                         <br><br>
                         <input type="submit" value="Update User Details" class="btn btn-outline-primary"><br><br>
-                        <a href="{{ url_for('admin_dashboard')}}" class="btn btn-outline-danger">Back</a>
+                        <a href="{{ url_for('admin_users')}}" class="btn btn-outline-danger">Back</a>
                     </form>
                 </div>
             </div>
