--- a/templates/student_dashboard.html
+++ b/templates/student_dashboard.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-info text-center bg-secondary p-4">Welcome to the Students Dashboard
+        <h1 class="text-primary text-center bg-warning p-4">Welcome to the Students Dashboard
             
         </h1>
         <h2><p class="text-warning text-center">Hello, {{ name }}</p></h2>
