--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
+    <div class="container card shadow">
 
         <!-- Flash Messages -->
         {% with messages = get_flashed_messages(with_categories=true) %}
@@ -31,11 +31,11 @@
         <div class="text-center mb-5">
             <a href="{{ url_for('admin_users') }}" class="btn btn-primary btn-lg mx-2">View Users</a>
             <br><br>
-            <a href="{{ url_for('view_logs') }}" class="btn btn-success btn-lg mx-2">View Logs</a>
+            <a href="{{ url_for('confirm_admin_password') }}" class="btn btn-success btn-lg mx-2">View Logs</a>
         </div>
 
         <div class="text-center">
-            <a href="{{ url_for('logout') }}" class="btn btn-outline-dark">Logout</a>
+            <a href="{{ url_for('logout') }}" class="btn btn-outline-dark">Logout</a><br><br>
         </div>
 
     </div>
