--- a/templates/teacher_dashboard.html
+++ b/templates/teacher_dashboard.html
@@ -44,5 +44,7 @@
         <a href="{{ url_for('create_assignment') }}" class="btn btn-outline-success">Post New Assignment</a><br><br>
         <a href="/logout" class="btn btn-secondary">Logout</a>
     </div>
+    {% extends "base.html" %}
+
 </body>
 </html>
