--- a/templates/view_users.html
+++ b/templates/view_users.html
@@ -39,5 +39,7 @@
         </table>
         <a href="{{ url_for('admin_dashboard') }}" class="btn btn-warning mt-3">Back to Dashboard</a>
     </div>
+    {% extends "base.html" %}
+
 </body>
 </html>
