--- a/templates/admin_dashboard.html
+++ b/templates/admin_dashboard.html
@@ -41,5 +41,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"></script>
+    {% extends "base.html" %}
+
 </body>
 </html>
