--- a/templates/confirm_admin.html
+++ b/templates/confirm_admin.html
@@ -19,5 +19,7 @@
             <button type="submit" class="btn btn-primary">Confirm</button>
         </form>
     </div>
+    {% extends "base.html" %}
+
 </body>
 </html>
