--- a/templates/delete_user.html
+++ b/templates/delete_user.html
@@ -7,13 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
 </head>
 <body>
-<div class="container mt-5">
-    <h3 class="text-danger">Confirm Deletion</h3>
-    <p>Are you sure you want to delete <strong>{{ user[0] }}</strong>?</p>
-    <form method="post">
-        <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Cancel</a>
-        <button type="submit" class="btn btn-danger">Delete</button>
-    </form>
-</div>
+    <div class="container mt-5">
+        <h3 class="text-danger text-center display-5"><strong>Confirm Deletion</strong></h3>
+        <p>Are you sure you want to delete <strong>{{ user[0] }}</strong>?</p>
+        <form method="post">
+            <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Cancel</a>
+            <button type="submit" class="btn btn-danger">Delete</button>
+        </form>
+    </div>
+    {% extends "base.html" %}
+
 </body>
 </html>
