--- a/templates/view_logs.html
+++ b/templates/view_logs.html
@@ -6,29 +6,32 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-<div class="container mt-5">
-    <h3 class="text-center text-primary mb-4">System Logs</h3>
-    <table class="table table-bordered table-striped">
-        <thead class="table-dark">
-            <tr>
-                <th>Time of Access</th>
-                <th>User Name</th>
-                <th>Email</th>
-                <th>Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for log in logs %}
+    <div class="container">
+        <h3 class="text-center text-primary mb-4 bg-dark display-5 p-4"><b>System Logs</b></h3>
+        <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Back to Dashboard</a><br><br>
+        <table class="table table-bordered table-striped">
+            <thead class="table-dark">
                 <tr>
-                    <td>{{ log[0] }}</td> <!-- timestamp -->
-                    <td>{{ log[1] }}</td> <!-- fullname -->
-                    <td>{{ log[2] }}</td> <!-- email -->
-                    <td>{{ log[3] }}</td> <!-- action -->
+                    <th>Time of Access</th>
+                    <th>User Name</th>
+                    <th>Email</th>
+                    <th>Action</th>
                 </tr>
-            {% endfor %}
-        </tbody>
-    </table>
-    <a href="{{ url_for('admin_dashboard') }}" class="btn btn-secondary">Back to Dashboard</a>
-</div>
+            </thead>
+            <tbody>
+                {% for log in logs %}
+                    <tr>
+                        <td>{{ log[0] }}</td> <!-- timestamp -->
+                        <td>{{ log[1] }}</td> <!-- fullname -->
+                        <td>{{ log[2] }}</td> <!-- email -->
+                        <td>{{ log[3] }}</td> <!-- action -->
+                    </tr>
+                {% endfor %}
+            </tbody>
+        </table>
+        
+    </div>
+    {% extends "base.html" %}
+
 </body>
 </html>
